[tool.poetry]
name = "maze-and-path-finding"
version = "0.1.0"
description = ""
authors = ["Chayapon (First) Thunsetkul <chayaponthunsetkul@gmail.com>"]
readme = "README.md"
packages = [{include = "maze_and_path_finding"}]

[tool.poetry.dependencies]
python = "^3.10"
pygame = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
