[tool.poetry]
name = "maze-and-path-finding"
version = "0.1.0"
description = "maze and path finding"
authors = ["tonpai <paigood999@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pygame = "^2.5.2"
jupyter = "^1.0.0"
pytest-cov = "^4.1.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
